--- a/graf/ctverce.tex
+++ b/graf/ctverce.tex
@@ -111,7 +111,7 @@
     \gplgaddtomacro\gplfronttext{%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics[width={425.10bp},height={255.10bp}]{ctverce}}%
+    \put(0,0){\includegraphics[width={425.10bp},height={255.10bp}]{graf/ctverce.eps}}%
     \gplfronttext
   \end{picture}%
 \endgroup
