--- a/sekce/3-soucasny-stav-resene-problematiky.tex
+++ b/sekce/3-soucasny-stav-resene-problematiky.tex
@@ -1,167 +1,3 @@
-\newcommand{\nsum}{\sum^n_{i=1}}
-\newcommand{\nsumx}{\sum^n_{i=1}x_i}
-\newcommand{\nsumy}{\sum^n_{i=1}y_i}
-\newcommand{\nsumxx}{\sum^n_{i=1}x_i^2}
-\newcommand{\nsumxy}{\sum^n_{i=1}x_iy_i}
-
 \section{Současný stav řešené problematiky}
-\subsection{Proložení dat funkcí}
-Ve fyzikálních experimentech obvykle měříme veličiny, které jsou závislé na
-veličině jiné. Ta se během měření mění, což nám umožňuje pomocí měření obou
-veličin vysledovat vztah mezi závislou a nezávislou veličinou. Nezávislou
-veličinou velice často bývá čas, ale také jí může být např. teplota, síla,
-poloha a další.\cite{praktikum}
-
-\subsubsection{Aproximace a interpolace}
-Při prokládání bodů funkcí se můžeme přiklonit k jedné ze dvou metod: k
-aproximaci, nebo interpolaci.
-
-\paragraph{Interpolace} je proces, kdy se snažíme nalézt funkci, která propojí
-všechny nám známé body. Nejjednodušší metodou, jak toho dosáhnout, je využít
-lineární interpolace, kdy jednotlivé body propojíme přímkou. Můžeme se s ní
-setkat například při vytváření grafů v tabulkových editorech (např. MS Excel či
-LibreOffice Calc), kdy propojení bodů přímkou je obvykle výchozí možnost
-vykreslování grafů. Nevýhoda této metody je ovšem ostrost funkce, kdy sice je
-spojitá, ale není diferencovatelná na celém svém oboru. Kvůli své ostrosti
-zároveň tato metoda mnohdy nepředstavuje reálný průběh původní funkce.
-
-Tyto problémy řeší méně rozšířené metody, jakými jsou kupříkladu kvadratická
-interpolace či interpolace polynomem. Ty zmenšují interpolační odchylky a díky
-definici polynomem jsou diferencovatelné na celé definičním oboru. Ovšem jsou
-také složitější na spočítání, jak už z pohledu matematiky, tak z pohledu
-výpočetního výkonu.
-
-\paragraph{Aproximace} se od interpolace liší v jednom zásadním aspektu:
-nevyžaduje, aby výsledná funkce procházela všemi body. To nám umožňuje najít
-o~mnoho hladší funkce, které kopírují průběh dat, či získat neznámé parametry
-závislosti z dat, která mohou obsahovat chybu měření. 
-
-Z tohoto důvodu je aproximace vhodnější při prokládání experimentálně získaných
-dat funkcí a umožňujeme nám porovnat jednotlivé předpisy funkcí a jejich
-korelaci s daty.
-
-\subsubsection{Metoda nejmenších čtverců}
-\label{sec:čtverce}
-Při našich experimentech měříme velké množství dat a přirozeně chceme všechna
-z nich využít v aproximaci naší funkce, čehož právě metoda nejmenších čtverců
-dosahuje. Ta je založena na principu, kdy se snažíme minimalizovat součet
-čtverců odchylek mezi naměřenými daty a aproximovanou funkcí.
-
-\plotfig{graf/ctverce.tex}[Ukázka metody nejmenších čtverců]
-
-Označme si naší teoretickou funkci jako $f(x)$, ve které figurují kupříkladu
-tři neznámé označené jako $a$, $b$ a $c$. Do funkce~$f$ tak vstupuje
-proměnná~$x$ a neznámé~$a,b,c$. Aproximace funkce pomocí metody nejmenších
-čtverců je tedy potom o najít ideální hodnoty $a,b,c$ takové, aby právě součet
-čtverců odchylek.
-
-Důležitou otázkou na zodpovězení je, proč vlastně se snažíme najít minimum sumy
-čtverců odchylek. Pokud máme obecný předpis funkce~$f(x)$, tak víme, že po
-dosazení každé jedné naměřené hodnoty~$x_i$ bychom měli dostat výslednou
-hodnotu měření. Rozdíl mezi touto teoretickou hodnotu~$f(x_i)$ a ve skutečnosti
-naměřenou hodnotou~$y_i$ si označme jako~$\Delta_i = f(x_i)-y_i$. Při
-aproximaci bychom tak mohli chtít jednoduše minimalizovat tyto jednotlivé
-rozdíly~$\Delta_i$, neboli minimalizovat funkci~$\nsum \Delta_i$. Avšak tu není
-možné minimalizovat, protože minimum jakéhokoliv součtu je vždy $-\infty$.
-Abychom se tedy vyhnuli tomuto problému, sčítáme hodnoty rozdílů umocněné na
-druhou mocninu~$\nsum \Delta_i^2$, přičemž minimum této funkce se nachází
-v~bodě~$0$.
-
-Obecně tedy můžeme metodu nejmenších čtverců vyjádřit jako hledaní ideálních 
-parametrů funkce~$f(x)$ pro minimalizace funkce~$S$, pro kterou platí
-\eq{
-    S = \nsum(y_i - f(x_i))^2\,.\lbl{eq:general_squares}\\
-}
-Tento problém se řeší dvěma hlavními metodami: iterativně a analyticky.
-
-\paragraph{Iterativní řešení} je obecné, fungující pro každý předpis pracující
-na principu postupného iterování proměnných, kdy s každou iterací se funkce
-přibližuje správnému výsledku, dokud funkce nekonverguje. Jsou využívány pro
-řešení nelineárních problému, které nejsem schopni analyticky řešení. Tato
-metoda je umožněna využitím optimalizovaných počítačových algoritmů, například
-pomocí Levenberg-Marquardtova algoritmu.
-
-\paragraph{Analytické řešení} funguje na principu nalezení minima pomocí
-parciálních derivací podle všech neznámých parametrů. Z těchto derivací
-následně vzniká soustava rovnic, kterou jsme schopni vyřešit.  Je využívaná pro
-řešení lineárních problémů, kdy můžeme naší rovnici zapsat pomocí polynomu
-$n$-tého řádu.
-
-
-\subsubsection{Lineární regrese}
-Speciální případ analytického řešení je lineární regrese. Jedná se o případ, kdy
-experimentálně získaná data prokládáme lineární funkcí s obecným předpisem
-\eq{
-    f(x) = ax + b\,.
-}
-V sekci~\ref{sec:čtverce} jsme si definovali rovnici~\eqref{eq:general_squares},
-do které tento obecný lineární předpis můžeme dosadit a tím si vyjádřit rovnici
-sumy konkrétně pro lineární funkci:
-\eq[m]{
-    S = \nsum(y_i-ax_i-b)^2\,.
-}
-
-Abychom proložili data funkcí, musíme nalézt minimum funkce~$S$. Toho dosáhneme
-pomocí položení derivace této funkce rovnou nule, respektive položením
-jednotlivých parciálních derivací rovných nule, protože se zde nachází dvě
-neznámé. 
-
-\begin{minipage}{0.45\textwidth}
-\eq[m]{
-    \pder{S}{a} &= \nsum \(2\(y_i-ax_i-b\)*\(0-x_i-0\)\)\\
-    \pder{S}{a} &= -2\nsum x_i\(y_i-ax_i-b\)
-}
-\end{minipage}
-\begin{minipage}{0.55\textwidth}
-\eq[m]{
-    \pder{S}{b} &= \nsum \(2\(y_i-ax_i-b\)*\(0-0-1\)\)\\
-    \pder{S}{b} &= -2\nsum \(y_i-ax_i-b\)
-}
-\end{minipage}
-
-\begin{minipage}{0.45\textwidth}
-\eq[m]{
-    -2\nsum x_i\(y_i-ax_i-b\)&=0\\
-    \nsum \(y_ix_i-ax_i^2-bx_i\)&=0\\
-    \nsum y_ix_i -\nsum ax_i^2 -\nsum bx_i&=0\\
-    a\nsumxx +b\nsumx&=\nsumxy
-}
-\end{minipage}
-\begin{minipage}{0.55\textwidth}
-\eq[m]{
-    -2\nsum \(y_i-ax_i-b\) &= 0\\
-    \nsum y_i -\nsum ax_i -\nsum b &= 0\\
-    a\nsumx + nb &= \nsumy
-}
-\end{minipage}
-
-Po jednotlivém derivování funkce~$S$ podle~$a$ a $b$ a upravení výrazů
-dostáváme dvě rovnice, ve kterých $a$ a $b$ figurují jako neznáme. To znamená,
-že se jedná o soustavu dvou rovnic o dvou neznámých, což můžeme jednoduše
-pomocí dosazovací metody vyřešit pro~$a$.
-\eq[m]{
-    a\nsumx+nb = \nsumy\quad&\Rightarrow\quad 
-        b=\frac{\nsumy-a\nsumx}{n}\lbl{eq:b_from_dev}\\
-    a\nsumxx+b\nsumx=\nsumxy\quad&\Rightarrow\quad 
-        a\nsumxx+\frac{\nsumy-a\nsumx}{n}\nsumx=\nsumxy
-}
-
-\begin{gather*}
-    a\nsumxx+\frac{n}\nsumy\nsumx-\frac{n}a\(\nsumx\)^2=\nsumxy\\
-    an\nsumxx-a\(\nsumx\)^2=n\nsumxy-\nsumx\nsumy\\
-    a=\frac{n\nsumxy-\nsumx\nsumy}{n\nsumxx-\(\nsumx\)^2}\lbl{eq:a}
-\end{gather*}
-
-A protože znamená rovnici~\eqref{eq:a} pro $a$, můžeme jí dosadit do dříve
-odvozené rovnice~\eqref{eq:b_from_dev} pro $b$, čímž dostáváme řešení této
-soustavy pro obě neznáme v podobě rovností~\eqref{eq:a} a~\eqref{eq:b}.
-\eq[m]{
-    b&=\frac{\nsumy-a\nsumx}{n}\\
-    b&=\frac{\nsumy-\frac{n\nsumxy-\nsumx\nsumy}{n\nsumxx-\(\nsumx\)^2}\nsumx}{n}\\
-    b&=\frac{n\nsumxx\nsumy-\nsumy\(\nsumx\)^2-n\nsumxy\nsumx+\nsumy\(\nsumx\)^2}
-    {n^2\nsumxx-n\(\nsumx\)^2}\\
-    b&=\frac{\nsumxx\nsumy-n\nsumxy\nsumx}{n\nsumxx-\(\nsumx\)^2}\lbl{eq:b}
-}
-
-\subsection{Termoelektrický jev}
-
+\subfile{3.1-metoda-ctvercu.tex}
+\subfile{3.2-termoelektrika.tex}
