--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -1,3 +1,21 @@
 \subsection{Termoelektrický jev}
-\subsubsection{Teorie}
+\subsubsection{Seebeckův a Peltierův efekt}
+Termoelektrický jev se vyznačuje přímou konverzí tepla na elektrické napětí 
+a naopak. Objevuje se vždy u spojené dvojce různých kovů a v podstatě sdružuje
+tři efekty pod jeden název: efekt Seebeckův, Peltierův a Thomsonův.
+
+\paragraph{Seebeckův efekt} byl poprvé objeven německým fyzikem Thomasem
+Johannem Seebeckem a popisuje vlastnost termočlánku, která má za příčinu
+vytváření elektrického napětí na základě rozdílu teplot. Jestliže jeden spoj
+termočlánku začneme zahřívat a druhý naopak ochlazovat, vznikne na každém konci
+jiný potenciál, což má za důvod vzniku termoelektrického napětí. \cite{jreichl}
+
+\paragraph{Peltierův efekt}
+\paragraph{Thomsův efekt}
+\footnotei{,}{Teoreticky se jedná o tři různé efekty, kdy
+můžeme ke dvou již zmíněným přidat ještě třetí Thomsův efekt, který může být
+využit pro výpočet konstant v Seebeckově a Peltierově efektu. Na to je ovšem }
+
+\subsubsection{Termočlánky}
+
 \subsubsection{Experiment}
