--- a/sources.bib
+++ b/sources.bib
@@ -7,3 +7,8 @@
     isbn = {978-80-7509-335-6}
 }
 
+@online{jreichl,
+    author = "Jaroslav Reichl",
+    title = "Encyklopedie fyziky",
+    url = "http://fyzika.jreichl.com/main.article/view/910-seebeckuv-jev"
+}
