--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -1,21 +1,34 @@
 \subsection{Termoelektrický jev}
-\subsubsection{Seebeckův a Peltierův efekt}
+\subsubsection{Efekty termoelektrické jevu}
 Termoelektrický jev se vyznačuje přímou konverzí tepla na elektrické napětí 
-a naopak. Objevuje se vždy u spojené dvojce různých kovů a v podstatě sdružuje
-tři efekty pod jeden název: efekt Seebeckův, Peltierův a Thomsonův.
+a naopak. Objevuje se vždy u spojené dvojce různých kovů a ve své podstatě je sdružením
+třech efektů pod jeden název: efektu Seebecka, Peltierova a Thomsonova.
 
 \paragraph{Seebeckův efekt} byl poprvé objeven německým fyzikem Thomasem
 Johannem Seebeckem a popisuje vlastnost termočlánku, která má za příčinu
 vytváření elektrického napětí na základě rozdílu teplot. Jestliže jeden spoj
 termočlánku začneme zahřívat a druhý naopak ochlazovat, vznikne na každém konci
-jiný potenciál, což má za důvod vzniku termoelektrického napětí. \cite{jreichl}
+jiný potenciál, což má za důvod vzniku termoelektrického napětí. \cite{jreichl-seebeck}
 
-\paragraph{Peltierův efekt}
-\paragraph{Thomsův efekt}
-\footnotei{,}{Teoreticky se jedná o tři různé efekty, kdy
-můžeme ke dvou již zmíněným přidat ještě třetí Thomsův efekt, který může být
-využit pro výpočet konstant v Seebeckově a Peltierově efektu. Na to je ovšem }
+\paragraph{Peltierův efekt} je považován za přesným opak efektu Seebeckova. Byl
+objeven Jeanem Peltierem v roce 1834 a~dokazuje, že při změna potenciálů, tedy
+protékání proudu, může způsobit změnu teplot. To implikuje přenos tepla z
+jednoho konce na druhý, což může být využito například pro chlazení předmětu
+bez nutnosti jakýchkoliv pohybujících se součástek.
+\cite{peltier}
+
+\paragraph{Thomsův efekt} je třetí a poslední efekt v rámci termoelektrického
+jevu.  Popisuje vlastnost vodiče při zahřívání jednoho z jeho konců. Při
+zahřívání vodiče na jednom konci vzniká uvnitř materiálu teplotní gradient
+$\Delta T/\Delta l$, což vytváří mezi konci malé termoelektrické napětí. Je tím
+tedy velice podobný Seebeckovu efektu, ovšem zde se jedná pouze o jeden vodič
+namísto dvou různých kovů.
+\cite{jreichl-thomson}
 
 \subsubsection{Termočlánky}
+Jako termočlánky nazýváme zařízení, které se skládá ze dvou, spolu spojených,
+druhů kovu. Protože se zde projevuje termoelektrický jev, především tedy Seebeckův
+efekt, může být termočlánek využívám jako teploměr měřící rozdíl od referenčí
+teploty.
 
 \subsubsection{Experiment}
