--- a/sources.bib
+++ b/sources.bib
@@ -7,8 +7,25 @@
     isbn = {978-80-7509-335-6}
 }
 
-@online{jreichl,
+@online{jreichl-seebeck,
     author = "Jaroslav Reichl",
-    title = "Encyklopedie fyziky",
+    title = "Seebeckův jev",
     url = "http://fyzika.jreichl.com/main.article/view/910-seebeckuv-jev"
+}
+
+@online{jreichl-peltier,
+    author = "Jaroslav Reichl",
+    title = "Peltierův jev",
+    url = "http://fyzika.jreichl.com/main.article/view/911-peltieruv-jev"
+}
+
+@online{jreichl-thomson,
+    author = "Jaroslav Reichl",
+    title = "Thomsonův jev",
+    url = "http://fyzika.jreichl.com/main.article/view/912-thomsonuv-jev"
+}
+
+@online{peltier,
+    title = "The Peltier Effect and Thermoelectric Cooling",
+    url   = "http://ffden-2.phys.uaf.edu/212_spring2007.web.dir/sedona_price/phys_212_webproj_peltier.html"
 }
