--- a/sources.bib
+++ b/sources.bib
@@ -7,6 +7,15 @@
     isbn = {978-80-7509-335-6}
 }
 
+@thesis{diplomka,
+    author      = "Michal Mejzlík",
+    title       = "Návrh a tvorba laboratorní úlohy s peltierovým článkem",
+    type        = {Diplomová práce},
+    institution = "FEKT VUT",
+    year        = "2009",
+    url         = "https://www.vutbr.cz/www_base/zav_prace_soubor_verejne.php?file_id=15693"
+}
+
 @online{jreichl-seebeck,
     author = "Jaroslav Reichl",
     title = "Seebeckův jev",
