--- a/seminarka.cls
+++ b/seminarka.cls
@@ -49,7 +49,8 @@
   at           = {v},
   bysupervisor = {vedouc\'{i} pr\'{a}ce},
   urlfrom      = {dostupn\'{e} z},
-  urlalso      = {dostupn\'{e} tak\'{e} z},
+  %urlalso      = {dostupn\'{e} tak\'{e} z},
+  urlalso      = {dostupn\'{e} z},
   director     = {re\v{z}is\'{e}r},
   bydirector   = {re\v{z}ie},
   inventor     = {vyn\'{a}lezce},
