--- a/sources.bib
+++ b/sources.bib
@@ -4,37 +4,38 @@
     year      = "2015",
     publisher = "Mendelova Univerzita",
     location  = "Brno",
-    isbn = {978-80-7509-335-6}
+    isbn      = "978-80-7509-335-6"
 }
 
 @thesis{diplomka,
     author      = "Michal Mejzlík",
     title       = "Návrh a tvorba laboratorní úlohy s peltierovým článkem",
-    type        = {Diplomová práce},
+    type        = "Diplomová práce",
     institution = "FEKT VUT",
     year        = "2009",
-    url         = "https://www.vutbr.cz/www_base/zav_prace_soubor_verejne.php?file_id=15693"
+    url         = "https://www.vutbr.cz/www_base/zav_prace_soubor_verejne.php?file_id=15693",
+    supervisor  = "Ing. Jan Macháček"
 }
 
 @online{jreichl-seebeck,
     author = "Jaroslav Reichl",
-    title = "Seebeckův jev",
-    url = "http://fyzika.jreichl.com/main.article/view/910-seebeckuv-jev"
+    title  = "Seebeckův jev",
+    url    = "http://fyzika.jreichl.com/main.article/view/910-seebeckuv-jev"
 }
 
 @online{jreichl-peltier,
     author = "Jaroslav Reichl",
-    title = "Peltierův jev",
-    url = "http://fyzika.jreichl.com/main.article/view/911-peltieruv-jev"
+    title  = "Peltierův jev",
+    url    = "http://fyzika.jreichl.com/main.article/view/911-peltieruv-jev"
 }
 
 @online{jreichl-thomson,
     author = "Jaroslav Reichl",
-    title = "Thomsonův jev",
-    url = "http://fyzika.jreichl.com/main.article/view/912-thomsonuv-jev"
+    title  = "Thomsonův jev",
+    url    = "http://fyzika.jreichl.com/main.article/view/912-thomsonuv-jev"
 }
 
 @online{peltier,
-    title = "The Peltier Effect and Thermoelectric Cooling",
-    url   = "http://ffden-2.phys.uaf.edu/212_spring2007.web.dir/sedona_price/phys_212_webproj_peltier.html"
+    title  = "The Peltier Effect and Thermoelectric Cooling",
+    url    = "http://ffden-2.phys.uaf.edu/212_spring2007.web.dir/sedona_price/phys_212_webproj_peltier.html"
 }
