--- a/sources.bib
+++ b/sources.bib
@@ -1,10 +1,17 @@
 @unpublished{praktikum,
-    author    = "Vojtěch Kumbár",
+    author    = "Vojtěch Kumbári and Stanislav Bartoň and Ivo Křivánek",
     title     = "Fyzikální praktikum",
     year      = "2015",
     publisher = "Mendelova Univerzita",
     location  = "Brno",
     isbn      = "978-80-7509-335-6"
+}
+
+@unpublished{fyzikalnicv,
+    author = "Stanislav Bartoň and Ivo Křivánek and Libor Severa",
+    title = "Fyzika -- Laboratorní cvičení",
+    year = "2005",
+    location = "Brno"
 }
 
 @thesis{diplomka,
